--- a/web/index.html
+++ b/web/index.html
@@ -20,16 +20,16 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="website_university">
+  <meta name="apple-mobile-web-app-title" content="Fluse">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>website_university</title>
+  <title>Fluse</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body id="container">
+<body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
